--- a/ajax2.html
+++ b/ajax2.html
@@ -23,6 +23,19 @@
 					}
 				})
 			})
+			$('#post').on('click',function(){
+				$.ajax({
+					method:'POST',
+					url:'http://localhost:3000/data',
+					data:{
+						id:'011',
+						name:'地理图册'
+					},
+					success:function(res){
+						console.log(res)
+					}
+				})
+			})
 		})
 	</script>
 </body>
