--- a/ajax2.html
+++ b/ajax2.html
@@ -4,39 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<script src="jquery.js"></script>
+	<link rel="stylesheet" href="index.css" />
+	<script src="index.js"></script>
+	
 </head>
 <body>
 	<button id="get">get</button>
 	<button id="post">post</button>
-	<script>
-		$(function(){
-			$('#get').on('click',function(){
-				$.ajax({
-					method:'GET',
-					url:'http://localhost:3000/data',
-					data:{
-						id:'3'
-					},
-					success:function(res){
-						console.log(res)
-					}
-				})
-			})
-			$('#post').on('click',function(){
-				$.ajax({
-					method:'POST',
-					url:'http://localhost:3000/data',
-					data:{
-						id:'011',
-						name:'地理图册'
-					},
-					success:function(res){
-						console.log(res)
-					}
-				})
-			})
-		})
-	</script>
+
 </body>
 </html>
